syntax = "proto3";
package proto;

import "cartMessage.proto";

service CartService {
  rpc CreateCartItem(CreateCartItemRequest) returns (CreateCartItemResponse);
  rpc FindCartItemsWithPagination(FindCartItemsWithPaginationRequest) returns (FindCartItemsWithPaginationResponse);
  rpc UpdateCartItemById(UpdateCartItemByIdRequest) returns (UpdateCartItemByIdResponse);
  rpc DeleteCartItem(DeleteCartItemRequest) returns (DeleteCartItemResponse);
}